Pagina de login/ Login page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
                 <i id="mode_icon" class="fa-solid fa-moon"></i>
             </div>
 
-            <div id="inputs">
+            <div class="inputs" id="inputs">
                 <div class="input-box">
-                    <label for="email">
+                    <label for="id">
                         ID
                         <div class="input-field">
                             <i class="fa-solid fa-envelope"></i>
-                            <input type="text" id="user" name="user">
+                            <input type="text" id="user" name="user" placeholder="ID or e-mail">
+
                         </div>
                     </label>
                 </div>
@@ -32,10 +33,9 @@
                         Password
                         <div class="input-field">
                             <i class="fa-solid fa-key"></i>
-                            <input type="password" id="password" name="password">
+                            <input type="password" id="password" name="password" placeholder="Password">
                         </div>
                     </label>
-
                     <div id="forgot_password">
                         <a href="#">
                         Forgot your password?
